Authentication , Authorization, Error Handlers and redis improvements
