# packages/api/routes/v1/UserRoute.js
@@ -1,0 +1,14 @@
+const express = require('express');
+const { UserController } = require('../../controllers');
+
+const router = express.Router();
+
+/*
+ *
+ * USER OPERATIONS
+ *
+ */
+router.get('/', UserController.userList);
+
+
+module.exports = router;
